# npo-api

./: .editorconfig  .env.sample  .env.test.sample  .gitignore  LICENSE  README.md  pyproject.toml
migrations/: env.py
migrations/versions/: d18168929294_initial_revision.py
src/npo/: config.py  database.py  dependencies.py  main.py
src/npo/core/: file.py
src/npo/models/: errors.py  file.py
src/npo/routers/: utils.py
src/npo/routers/files/: routes.py  schemas.py  services.py
src/npo/routers/health/: routes.py  schemas.py  services.py
src/npo/routers/metadata/: routes.py  services.py
src/npo/routers/settings/: routes.py
tests/: conftest.py  test_files.py  test_health.py  test_metadata.py  test_settings.py
