[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "npo"
version = "0.1.0"
description = "REST API to manage HD image"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "aiosqlite>=0.22.0",
  "alembic>=1.17.2",
  "asyncpg>=0.31.0",
  "fastapi[standard]>=0.125.0",
  "greenlet>=3.3.0",
  "psycopg[binary,pool]>=3.3.2",
  "pydantic-settings>=2.12.0",
  "pyexiftool>=0.5.6",
  "python-dotenv>=1.2.1",
  "python-multipart>=0.0.21",
  "pyvips[binary]>=3.1.1",
  "sqlalchemy>=2.0.45",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-datadir>=1.8.0",
    "pytest-dotenv>=0.5.2",
    "ruff>=0.14.10",
]

[tool.setuptools]
  package-dir = {"" = "src"}

[tool.setuptools.packages.find]
  where = ["src"]
  namespaces = true

[tool.ruff]
line-length = 100
exclude = [
    ".eggs",
    ".git",
    ".tox",
    ".venv",
]
src = ["src"]

[tool.ruff.lint]
# E et W : pycodestyle (PEP8)
# F : Pyflakes
# I : iSort
# PL : Pylint
# PT = flake8-pytest-style (Pytest specific rules)
# B  = flake8-bugbear (Recommanded by Flake8 to avoid issues)
select = ["E", "W", "F", "I", "PL", "PT", "B"]
ignore = [
    "D103",    # missing-function-docstring
    "D100",    # missing-module-docstring
    "D101",    # missing-class-docstring
]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
env_files = [
    ".env.test"
]
log_cli = false
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.alembic]
script_location = "%(here)s/migrations"
prepend_sys_path = [
    ".",
    "src",
]
